--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-Virtualenvify
-=============
-
-A script to build a virtualenv for an existing project, auto-detecting package imports and installing them into the env
+README.md
